--- a/projectRizal.html
+++ b/projectRizal.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RIZALTZY</title>
-    <link rel="stylesheet" href="project/styles.css">
-</head>
+    <link rel="stylesheet" href="project/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header id="head">
-        <nav class="navbar">
-            <div class="nav-item">
-                <label class="nav-logo">RIZALTZY</label>
-                <ul class="nav-link">
-                    <li class="nav-button">Home</li>
-                    <li class="nav-button">About</li>
-                    <li class="nav-button">Contact</li>
-                </ul>
-            </div>
-            <ul class="nav-link">
-                <li class="nav-auth login">Login</li>
-                <li class="nav-auth register">Register</li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <div class="nav-item">
+          <label class="nav-logo">RIZALTZY</label>
+          <ul class="nav-link">
+            <li class="nav-button">Home</li>
+            <li class="nav-button">About</li>
+            <li class="nav-button">Contact</li>
+          </ul>
+        </div>
+        <ul class="nav-link">
+          <li class="nav-auth login">Login</li>
+          <li class="nav-auth register">Register</li>
+        </ul>
+      </nav>
     </header>
     <main id="main">
-        <h1>RIZALTZY</h1>
-        <p>Testing Project Website</p>
+      <div class="container">
+        <div class="main-text">
+          <h1 class="main-title">RIZALTZY</h1>
+          <p class="main-desc">Testing Project Website</p>
+        </div>
+        <div class="main-button">
+          <button class="btn btn-primary">Info Lebih Lengkap</button>
+          <button class="btn btn-secondary">Tentang Saya</button>
+        </div>
+      </div>
     </main>
     <footer></footer>
-</body>
-
+  </body>
 </html>
